- Fixed issues with Dockerfile for server - Fixed issues with ENV variable namings - Added .env file compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     build: ./server
     environment:
       DATABASE: test_database
-      USER: root
+      MYSQL_USER: root
       PASSWORD: itesm
       HOST: mysql-database
     ports:
